--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -12,8 +12,9 @@ RUN mkdir -p /usr/lib/android-sdk/cmdline-tools/
 RUN cd /tmp/ && mv cmdline-tools/ latest/ && mv latest/ /usr/lib/android-sdk/cmdline-tools/
 RUN mkdir /usr/lib/android-sdk/licenses/
 RUN chmod -R 755 /usr/lib/android-sdk/
-RUN mkdir -p $HOME/.gradle
-RUN echo "org.gradle.jvmargs=-Xmx6g -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8 -XX:+UseParallelGC -XX:MaxMetaspaceSize=1g" > $HOME/.gradle/gradle.properties
-RUN echo "org.gradle.caching=true" >> $HOME/.gradle/gradle.properties
-RUN echo "org.gradle.parallel=true" >> $HOME/.gradle/gradle.properties
-RUN echo "org.gradle.configureondemand=true" >> $HOME/.gradle/gradle.properties
+RUN mkdir -p $HOME/.gradle && \
+    echo "org.gradle.jvmargs=-Xmx1g -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8 -XX:+UseParallelGC -XX:MaxMetaspaceSize=1g" > "$HOME/.gradle/gradle.properties" && \
+    echo "org.gradle.caching=true" >> "$HOME/.gradle/gradle.properties" && \
+    echo "org.gradle.parallel=true" >> "$HOME/.gradle/gradle.properties" && \
+    echo "org.gradle.configureondemand=true" >> "$HOME/.gradle/gradle.properties" && \
+    echo "kapt.incremental.apt=true" >> "$HOME/.gradle/gradle.properties"
