--- a/app/build.gradle
+++ b/app/build.gradle
@@ -147,7 +147,7 @@ android {
         buildTypes {
             debug {
                 testCoverageEnabled(project.hasProperty('coverage'))
-                resConfigs "en", "xxxhdpi"
+                resConfigs "xxxhdpi"
             }
         }
 
