--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -32,10 +32,10 @@ jobs:
                     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
                 if: ${{ always() }}
                 run: scripts/deleteOldComments.sh "test" "Unit" ${{github.event.number}}
+            -   name: Setup Gradle
+                uses: gradle/actions/setup-gradle@0bdd871935719febd78681f197cd39af5b6e16a6 # v4.2.2
             -   name: Run unit tests with coverage
-                uses: gradle/gradle-build-action@ac2d340dc04d9e1113182899e983b5400c17cda1 # v3.5.0
-                with:
-                    arguments: jacocoTestGplayDebugUnitTest
+                run: ./gradlew jacocoTestGplayDebugUnitTest
             -   name: Upload failing results
                 if: ${{ failure() }}
                 env:
